--- a/Sublight.UnitTest/Sublight.UnitTest.csproj
+++ b/Sublight.UnitTest/Sublight.UnitTest.csproj
@@ -58,6 +58,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="Api.cs" />
     <Compile Include="Hash.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
