--- a/Sublight.Core/Sublight.Core.csproj
+++ b/Sublight.Core/Sublight.Core.csproj
@@ -38,6 +38,7 @@
     <Compile Include="HashUtility.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RestApi.cs" />
+    <Compile Include="Types\NameValueCollection.cs" />
     <Compile Include="Types\Result.cs" />
   </ItemGroup>
   <ItemGroup>
