Added sandbox API for easier testing

--- a/Sublight.UnitTest/Sublight.UnitTest.csproj
+++ b/Sublight.UnitTest/Sublight.UnitTest.csproj
@@ -58,7 +58,9 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
-    <Compile Include="Api.cs" />
+    <Compile Include="ApiProduction.cs" />
+    <Compile Include="ApiSandbox.cs" />
+    <Compile Include="BaseTest.cs" />
     <Compile Include="Hash.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
