--- a/Sublight.Core/Sublight.Core.csproj
+++ b/Sublight.Core/Sublight.Core.csproj
@@ -38,8 +38,10 @@
     <Compile Include="HashUtility.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RestApi.cs" />
+    <Compile Include="Types\ImdbDetails.cs" />
     <Compile Include="Types\NameValueCollection.cs" />
     <Compile Include="Types\Result.cs" />
+    <Compile Include="Types\VideoDetails.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Newtonsoft.Json">
